tests/fixtures/invalid/none_bitor_none.py
# Cannot bitwise OR None and None
x: None = None | None
